Added folk to towns

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@ var maps = {};
 <script src="maps/world.js"></script>
 <script src="maps/britain.js"></script>
 <script src="maps/paws.js"></script>
+<script src="maps/skara.js"></script>
+<script src="maps/yew.js"></script>
+<script src="maps/LYCAEUM.js"></script>
+<script src="maps/LCB_1.js"></script>
 
 <!-- code -->
 <script src="u4.js"></script>
