--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ var maps = {};
 <div id="party" style="height:220px;">
 Party
 </div>
-<div id="messages" >
+<div id="messages" style="width:200px;">
 Messages
 </div>
 </div>
