Folk movement and included generate maps

--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@ var maps = {};
 </script>
 
 <!-- maps -->
-<script src="maps/world.js"></script>
-<script src="maps/britain.js"></script>
-<script src="maps/paws.js"></script>
-<script src="maps/skara.js"></script>
-<script src="maps/yew.js"></script>
+<script src="maps/WORLD.js"></script>
+<script src="maps/BRITAIN.js"></script>
+<script src="maps/PAWS.js"></script>
+<script src="maps/SKARA.js"></script>
+<script src="maps/YEW.js"></script>
 <script src="maps/LYCAEUM.js"></script>
 <script src="maps/LCB_1.js"></script>
+<script src="maps/LCB_2.js"></script>
 
 <!-- code -->
 <script src="u4.js"></script>
